<resources>
    <string-array name="type">
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
        <item>&#xf023;</item>
    </string-array>
    <string name="app_name">gameApp</string>
    <string name="icon_heart">&#xf1ee;</string>
    <string name="icon_triangle"> &#xf071;</string>
    <string name="icon_spinner">&#xf110;</string>
    <string name="icon_game">&#xf11b;</string>
    <string name="icon_sq">&#xf0c8;</string>

    <string name="icon_lock">&#xf023;</string>

    <string name="icon_play">&#xf04b;</string>
    <string name="icon_wifi">&#xf1eb;</string>
    <string name="icon_user">&#xf2be;</string>
    <string name="icon_feed"> &#xf09e;</string>
    <string name="icon_setting">&#xf013;</string>
    <string name="icon_playGame">&#xf01d;</string>
    <string name="icon_menu">&#xf0c9;</string>
    <string name="icon_rsss">&#xf09e;</string>
    <string name="icon_star">&#xf005;</string>
    <string name="icon_userplus">&#xf234;</string>
    <string name="icon_plus">&#xf067;</string>
    <string name="icon_square">&#xf04d;</string>
    <string name="icon_cloud">&#xf0c2;</string>

    <string name="icon_glass">&#xf000;</string>
    <string name="icon_globe">&#xf0ac;</string>
    <string name="icon_gratipay">&#xf184;</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>


    <string name="invitation_title">Invite title</string>
    <string name="invitation_message">Invite message lololololo </string>
    <string name="invitation_deep_link">https://k3svr.app.goo.gl/TPlw</string>
    <string name="invitation_custom_image">http://whitedevs.com/wp-content/uploads/2016/02/whiteDevs-logo.png</string>
    <string name="invitation_cta">Install</string>
    <string name="profile">PROFILE</string>
    <string name="feed">FEED</string>
    <string name="activity">ACTIVITY</string>
    <string name="settings">SETTINGS</string>
    <string name="title_activity_app_invite_invitation">AppInviteInvitation</string>

</resources>
